--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
+    "@types/react-native-vector-icons": "^6.4.12",
     "native-base": "^3.4.17",
     "react": "18.1.0",
     "react-native": "0.70.2",
@@ -19,7 +20,8 @@
     "react-native-safe-area-context": "^4.4.1",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^3.18.0",
-    "react-native-svg": "^13.2.0"
+    "react-native-svg": "^13.2.0",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
